add routes and firebase connexion
